Trying to fix process img on iphone

--- a/css/application.css
+++ b/css/application.css
@@ -183,6 +183,7 @@
     .work-proc-1-bg {
       background-position: right;
       background-size: cover;
+      background-attachment:scroll
     }
 
     .logo-img {
@@ -256,7 +257,7 @@
     font-size: 0.8em;
     line-height: 18px;
   }
-}  
+}
 
 /* TYPEWRITER */
 
